Repository Addded and problems solveds

--- a/MyBlogs/Views/_ViewImports.cshtml
+++ b/MyBlogs/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using MyBlogs.ViewModels;
-@using MyBlogs.Models;
+﻿@using StaffManagment.ViewModels;
+@using StaffManagment.Models;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
