--- a/MyBlogs/Views/Home/Index.cshtml
+++ b/MyBlogs/Views/Home/Index.cshtml
@@ -1,11 +1,25 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
+﻿@model HomeFullViewModel
 @{
     Layout = "../Shared/_Layout.cshtml";
-    ViewBag.Title = "Staff detalss";
+    ViewBag.Title = "Staff List";
 }
-@{
-    <h1 class="h-75">Salom mendsdghdaghfuisahdfu8shgfuisdyhf</h1>
-}
+
+<div class="card-group">
+    @foreach (var item in Model.staffs)
+    {
+        var photoFilePath = "~/images/" + (item.PhotoFilePath ?? "user.png");
+        <div class="card m-3" style="min-width:18rem; max-width:30.5%">
+            <div class="card-header">
+                <h3>@item.FirstName @item.LastName</h3>
+            </div>
+            <img class="card-img-top" src="@photoFilePath" asp-append-version="true" />
+            <div class="card-footer text-center">
+                <a asp-controller="home" asp-action="detels" asp-route-Id="@item.Id" class="btn btn-primary m-1">View</a>
+                <a asp-controller="home" asp-action="edit" asp-route-Id="@item.Id" class="btn btn-primary m-1">Edit</a>
+                <form asp-controller="home" asp-action="delete" asp-route-Id="@item.Id" method="post">
+                    <button class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this record?');">Delete</button>
+                </form>
+            </div>
+        </div>
+    }
+</div>
