--- a/MyBlogs/Views/Shared/_Layout.cshtml
+++ b/MyBlogs/Views/Shared/_Layout.cshtml
@@ -3,15 +3,60 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/bootstrap/css/bootstrap.rtl.css" rel="stylesheet" />
-    <link href="~/bootstrap/css/bootstrap.rtl.min.css" rel="stylesheet" />
+    <environment include="Development">
+        <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <script src="~/jquery/jquery.slim.min.js"></script>
+        <script src="~/bootstrap/js/bootstrap.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+        crossorigin="anonymous"
+        asp-fallback-href="~/bootstrap/css/bootstrap.css" rel="stylesheet"
+        asp-fallback-test-class="sr-only"
+        asp-fallback-test-property="position"
+        asp-fallback-test-value="absolute"
+        asp-suppress-fallback-integrity="true" />
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"
+        asp-fallback-src="~/jquery/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"
+        asp-fallback-src="~/bootstrap/js/bootstrap.js"></script>
+    </environment>
+    <link href="~/css/style.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <div class="container">
-        @RenderBody()
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <a asp-controller="Home" asp-action="Index" class="navbar-brand">
+                <img src="~/images/usersLogo.png" width="30" height="30" asp-append-version="true" />
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#hamburgerNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="hamburgerNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a asp-controller="Home" asp-action="Index" class="nav-link">
+                            All Staff
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-controller="Home" asp-action="Create" class="nav-link">
+                            Create
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div>
+            @RenderBody()
+        </div>
     </div>
 </body>
 </html>
